// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSaverMenu should render with hd selected 1`] = `
<div>
  <h4>
    Data Saver
  </h4>
  <div
    className="dataSaverOption"
    onClick={[Function]}
  >
    <div
      className="dataSaverOptionLeft"
    >
      <div
        className="dataSaverOptionName"
      >
        saver
      </div>
      <div
        className="dataSaverOptionDesc"
      />
    </div>
    <div
      className="dataSaverOptionRight"
    >
      <div
        className="checkboxWrapper"
      >
        <img
          alt={false}
          src="checkbox-unchecked.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="dataSaverOption"
    onClick={[Function]}
  >
    <div
      className="dataSaverOptionLeft"
    >
      <div
        className="dataSaverOptionName"
      >
        sd
      </div>
      <div
        className="dataSaverOptionDesc"
      />
    </div>
    <div
      className="dataSaverOptionRight"
    >
      <div
        className="checkboxWrapper"
      >
        <img
          alt={false}
          src="checkbox-unchecked.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="dataSaverOption"
    onClick={[Function]}
  >
    <div
      className="dataSaverOptionLeft"
    >
      <div
        className="dataSaverOptionName"
      >
        hd
      </div>
      <div
        className="dataSaverOptionDesc"
      />
    </div>
    <div
      className="dataSaverOptionRight"
    >
      <div
        className="checkboxWrapper"
      >
        <img
          alt={true}
          src="checkbox-checked.svg"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DataSaverMenu should render with no selection 1`] = `
<div>
  <h4>
    Data Saver
  </h4>
  <div
    className="dataSaverOption"
    onClick={[Function]}
  >
    <div
      className="dataSaverOptionLeft"
    >
      <div
        className="dataSaverOptionName"
      >
        saver
      </div>
      <div
        className="dataSaverOptionDesc"
      />
    </div>
    <div
      className="dataSaverOptionRight"
    >
      <div
        className="checkboxWrapper"
      >
        <img
          alt={false}
          src="checkbox-unchecked.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="dataSaverOption"
    onClick={[Function]}
  >
    <div
      className="dataSaverOptionLeft"
    >
      <div
        className="dataSaverOptionName"
      >
        sd
      </div>
      <div
        className="dataSaverOptionDesc"
      />
    </div>
    <div
      className="dataSaverOptionRight"
    >
      <div
        className="checkboxWrapper"
      >
        <img
          alt={false}
          src="checkbox-unchecked.svg"
        />
      </div>
    </div>
  </div>
  <div
    className="dataSaverOption"
    onClick={[Function]}
  >
    <div
      className="dataSaverOptionLeft"
    >
      <div
        className="dataSaverOptionName"
      >
        hd
      </div>
      <div
        className="dataSaverOptionDesc"
      />
    </div>
    <div
      className="dataSaverOptionRight"
    >
      <div
        className="checkboxWrapper"
      >
        <img
          alt={false}
          src="checkbox-unchecked.svg"
        />
      </div>
    </div>
  </div>
</div>
`;
